--- a/.github/workflows/ec2-role.yml
+++ b/.github/workflows/ec2-role.yml
@@ -1,1 +1,49 @@
+name: ec2-creation-role
+
+on:
+  push:
+    branches:
+      - main  # Adjust the branch name as needed
+
+jobs:
+  ec2-ansible:
+    runs-on: ubuntu-latest  # You can choose a different operating system if needed
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9  # Choose a Python version compatible with Ansible
+    
+    - name: Clone roles
+      uses: GuillaumeFalourd/clone-github-repo-action@v2.3
+      with:
+        depth: 1
+        branch: 'main'
+        owner: 'freyac777'
+        repository: 'roles'
+
+    - name: Access cloned repo
+      run: |
+         cd roles
+         ls -la
+    
+    - name: Configure AWS credentials
+      run: |
+        echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+        echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+        echo "AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}" >> $GITHUB_ENV
+
+    - name: Install Ansible
+      run: |
+        pip install boto3
+        pip install botocore
+        pip install ansible
+           
+    - name: Run Ansible Playbook
+      run: |
+        ansible-playbook -i ./tests/inventory  ./tests/test.yml
 
