--- a/.github/workflows/ec2-role.yml
+++ b/.github/workflows/ec2-role.yml
@@ -37,7 +37,7 @@ jobs:
         echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
         echo "AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}" >> $GITHUB_ENV
 
-    - name: Install Ansible
+    - name: Install ansible
       run: |
         pip install boto3
         pip install botocore
