--- a/.github/workflows/ec2-role.yml
+++ b/.github/workflows/ec2-role.yml
@@ -45,6 +45,7 @@ jobs:
            
     - name: Run Ansible Playbook
       run: |
-        ansible-playbook -i ./ec2-instance/tests/inventory ./ec2-instance/tests/test.yml
+        cd ec2-instance
+        ansible-playbook ./tests/test.yml
 
 
